src/styles/modules/choice.scss
.ai-choice {
  background-color: #ffffff;

  &__list {
    padding: 15px 0px;

    &__item {
      display: flex;
      justify-content: flex-start;
      align-items: center;
      height: 50px;
      width: 100%;
      padding: 15px;
      border-radius: 6px;
      background-color: $--choice-bg-color-default;
      margin-bottom: 20px;
      box-sizing: border-box;
      cursor: pointer;
      font-size: 16px;
      color: $--font-color-grey;

      &.is-active {
        background-color: $--choice-bg-color-active;
        font-size: 16px;
      }
    }
  }

  &__list--image {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;

    &__item {
      width: 145px;
      height: 165px;
      border-radius: 4px;
      background-color: #F4F4F4;
      margin-bottom: 30px;
      padding: 6px;
      cursor: pointer;
      -webkit-tap-highlight-color: rgba(0, 0, 0, 0);

      &__wrap {
        width: 100%;
        height: 100%;
        position: relative;
        
        img {
          display: block;
          width: 100%;
          height: 100%;
          border-radius: 4px;
          object-fit: contain;
          margin-bottom: 10px;
        }

        &__icon {
          position: absolute;
          left: 0px;
          top: 0px;
          width: $--choice-active-btn-size;
          height: $--choice-active-btn-size;
          border-radius: 50%;
          border: 2px solid rgb(180, 176, 176);
          z-index: 10;
          padding: 2px;
          box-sizing: border-box;

          &__inner {
            width: 100%;
            height: 100%;
            border-radius: 50%;
          }
        }

        &__label {
          text-align: center;
          font-size: 14px;
        }
      }

      &.is-active {
        .ai-choice__list--image__item__wrap__icon__inner {
          background-color: $--color-success;
        }
      }
    }
  }
}

